--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -25,4 +25,4 @@ jobs:
       run: go test -v ./...
 
     - name: Benchmark
-      run: go test -bench Encode ./...
+      run: go test -bench . ./...
