--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -18,6 +18,11 @@ jobs:
       with:
         go-version: '1.21'
 
+    - name: Formatted?
+      run: |
+        gofmt -l .
+        test -z `gofmt -l .`
+
     - name: Build
       run: go build -v ./...
 
