--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -31,3 +31,9 @@ jobs:
 
     - name: Benchmark
       run: go test -bench . ./...
+
+    - name: Lint (staticcheck)
+      uses: dominikh/staticcheck-action@v1.3.0
+      with:
+        install-go: false
+        version: "2023.1.6"
