--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -35,7 +35,6 @@ jobs:
         run: go test -bench . ./...
 
       - name: Lint (staticcheck)
-        uses: dominikh/staticcheck-action@v1
-        with:
-          install-go: false
-          version: "2023.1.6"
+        run: |
+          go install honnef.co/go/tools/cmd/staticcheck@v0.6.1
+          "$(go env GOPATH)/bin/staticcheck" ./...
